// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectYears Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectYears
    handleCheck={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                Years
        </label>
        <t
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expandOnClick={false}
                expanded={Array []}
                icons={
                        Object {
                                "check": <span
                                  className="rct-icon rct-icon-check"
                        />,
                                "collapseAll": <span
                                  className="rct-icon rct-icon-collapse-all"
                        />,
                                "expandAll": <span
                                  className="rct-icon rct-icon-expand-all"
                        />,
                                "expandClose": <span
                                  className="rct-icon rct-icon-expand-close"
                        />,
                                "expandOpen": <span
                                  className="rct-icon rct-icon-expand-open"
                        />,
                                "halfCheck": <span
                                  className="rct-icon rct-icon-half-check"
                        />,
                                "leaf": <span
                                  className="rct-icon rct-icon-leaf"
                        />,
                                "parentClose": <span
                                  className="rct-icon rct-icon-parent-close"
                        />,
                                "parentOpen": <span
                                  className="rct-icon rct-icon-parent-open"
                        />,
                                "uncheck": <span
                                  className="rct-icon rct-icon-uncheck"
                        />,
                              }
                }
                id={null}
                lang={
                        Object {
                                "collapseAll": "Collapse all",
                                "expandAll": "Expand all",
                                "toggle": "Toggle",
                              }
                }
                name={undefined}
                nameAsArray={false}
                nativeCheckboxes={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [],
                                  "icon": <i
                                    className="fa fa-calendar-check-o"
                        />,
                                  "label": "All years",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onClick={null}
                onExpand={[Function]}
                onlyLeafCheckboxes={false}
                optimisticToggle={true}
                showExpandAll={false}
                showNodeIcon={true}
                showNodeTitle={false}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Years
</label>,
          <t
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expandOnClick={false}
            expanded={Array []}
            icons={
                        Object {
                                    "check": <span
                                      className="rct-icon rct-icon-check"
                        />,
                                    "collapseAll": <span
                                      className="rct-icon rct-icon-collapse-all"
                        />,
                                    "expandAll": <span
                                      className="rct-icon rct-icon-expand-all"
                        />,
                                    "expandClose": <span
                                      className="rct-icon rct-icon-expand-close"
                        />,
                                    "expandOpen": <span
                                      className="rct-icon rct-icon-expand-open"
                        />,
                                    "halfCheck": <span
                                      className="rct-icon rct-icon-half-check"
                        />,
                                    "leaf": <span
                                      className="rct-icon rct-icon-leaf"
                        />,
                                    "parentClose": <span
                                      className="rct-icon rct-icon-parent-close"
                        />,
                                    "parentOpen": <span
                                      className="rct-icon rct-icon-parent-open"
                        />,
                                    "uncheck": <span
                                      className="rct-icon rct-icon-uncheck"
                        />,
                                  }
            }
            id={null}
            lang={
                        Object {
                                    "collapseAll": "Collapse all",
                                    "expandAll": "Expand all",
                                    "toggle": "Toggle",
                                  }
            }
            name={undefined}
            nameAsArray={false}
            nativeCheckboxes={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [],
                                      "icon": <i
                                        className="fa fa-calendar-check-o"
                        />,
                                      "label": "All years",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onClick={null}
            onExpand={[Function]}
            onlyLeafCheckboxes={false}
            optimisticToggle={true}
            showExpandAll={false}
            showNodeIcon={true}
            showNodeTitle={false}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Years",
            "className": "label",
          },
          "ref": null,
          "rendered": "Years",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expandOnClick": false,
            "expanded": Array [],
            "icons": Object {
              "check": <span
                className="rct-icon rct-icon-check"
/>,
              "collapseAll": <span
                className="rct-icon rct-icon-collapse-all"
/>,
              "expandAll": <span
                className="rct-icon rct-icon-expand-all"
/>,
              "expandClose": <span
                className="rct-icon rct-icon-expand-close"
/>,
              "expandOpen": <span
                className="rct-icon rct-icon-expand-open"
/>,
              "halfCheck": <span
                className="rct-icon rct-icon-half-check"
/>,
              "leaf": <span
                className="rct-icon rct-icon-leaf"
/>,
              "parentClose": <span
                className="rct-icon rct-icon-parent-close"
/>,
              "parentOpen": <span
                className="rct-icon rct-icon-parent-open"
/>,
              "uncheck": <span
                className="rct-icon rct-icon-uncheck"
/>,
            },
            "id": null,
            "lang": Object {
              "collapseAll": "Collapse all",
              "expandAll": "Expand all",
              "toggle": "Toggle",
            },
            "name": undefined,
            "nameAsArray": false,
            "nativeCheckboxes": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [],
                "icon": <i
                  className="fa fa-calendar-check-o"
/>,
                "label": "All years",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onClick": null,
            "onExpand": [Function],
            "onlyLeafCheckboxes": false,
            "optimisticToggle": true,
            "showExpandAll": false,
            "showNodeIcon": true,
            "showNodeTitle": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    Years
          </label>
          <t
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expandOnClick={false}
                    expanded={Array []}
                    icons={
                              Object {
                                        "check": <span
                                          className="rct-icon rct-icon-check"
                              />,
                                        "collapseAll": <span
                                          className="rct-icon rct-icon-collapse-all"
                              />,
                                        "expandAll": <span
                                          className="rct-icon rct-icon-expand-all"
                              />,
                                        "expandClose": <span
                                          className="rct-icon rct-icon-expand-close"
                              />,
                                        "expandOpen": <span
                                          className="rct-icon rct-icon-expand-open"
                              />,
                                        "halfCheck": <span
                                          className="rct-icon rct-icon-half-check"
                              />,
                                        "leaf": <span
                                          className="rct-icon rct-icon-leaf"
                              />,
                                        "parentClose": <span
                                          className="rct-icon rct-icon-parent-close"
                              />,
                                        "parentOpen": <span
                                          className="rct-icon rct-icon-parent-open"
                              />,
                                        "uncheck": <span
                                          className="rct-icon rct-icon-uncheck"
                              />,
                                      }
                    }
                    id={null}
                    lang={
                              Object {
                                        "collapseAll": "Collapse all",
                                        "expandAll": "Expand all",
                                        "toggle": "Toggle",
                                      }
                    }
                    name={undefined}
                    nameAsArray={false}
                    nativeCheckboxes={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [],
                                          "icon": <i
                                            className="fa fa-calendar-check-o"
                              />,
                                          "label": "All years",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onClick={null}
                    onExpand={[Function]}
                    onlyLeafCheckboxes={false}
                    optimisticToggle={true}
                    showExpandAll={false}
                    showNodeIcon={true}
                    showNodeTitle={false}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              Years
</label>,
            <t
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expandOnClick={false}
              expanded={Array []}
              icons={
                            Object {
                                          "check": <span
                                            className="rct-icon rct-icon-check"
                            />,
                                          "collapseAll": <span
                                            className="rct-icon rct-icon-collapse-all"
                            />,
                                          "expandAll": <span
                                            className="rct-icon rct-icon-expand-all"
                            />,
                                          "expandClose": <span
                                            className="rct-icon rct-icon-expand-close"
                            />,
                                          "expandOpen": <span
                                            className="rct-icon rct-icon-expand-open"
                            />,
                                          "halfCheck": <span
                                            className="rct-icon rct-icon-half-check"
                            />,
                                          "leaf": <span
                                            className="rct-icon rct-icon-leaf"
                            />,
                                          "parentClose": <span
                                            className="rct-icon rct-icon-parent-close"
                            />,
                                          "parentOpen": <span
                                            className="rct-icon rct-icon-parent-open"
                            />,
                                          "uncheck": <span
                                            className="rct-icon rct-icon-uncheck"
                            />,
                                        }
              }
              id={null}
              lang={
                            Object {
                                          "collapseAll": "Collapse all",
                                          "expandAll": "Expand all",
                                          "toggle": "Toggle",
                                        }
              }
              name={undefined}
              nameAsArray={false}
              nativeCheckboxes={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [],
                                            "icon": <i
                                              className="fa fa-calendar-check-o"
                            />,
                                            "label": "All years",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onClick={null}
              onExpand={[Function]}
              onlyLeafCheckboxes={false}
              optimisticToggle={true}
              showExpandAll={false}
              showNodeIcon={true}
              showNodeTitle={false}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Years",
              "className": "label",
            },
            "ref": null,
            "rendered": "Years",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expandOnClick": false,
              "expanded": Array [],
              "icons": Object {
                "check": <span
                  className="rct-icon rct-icon-check"
/>,
                "collapseAll": <span
                  className="rct-icon rct-icon-collapse-all"
/>,
                "expandAll": <span
                  className="rct-icon rct-icon-expand-all"
/>,
                "expandClose": <span
                  className="rct-icon rct-icon-expand-close"
/>,
                "expandOpen": <span
                  className="rct-icon rct-icon-expand-open"
/>,
                "halfCheck": <span
                  className="rct-icon rct-icon-half-check"
/>,
                "leaf": <span
                  className="rct-icon rct-icon-leaf"
/>,
                "parentClose": <span
                  className="rct-icon rct-icon-parent-close"
/>,
                "parentOpen": <span
                  className="rct-icon rct-icon-parent-open"
/>,
                "uncheck": <span
                  className="rct-icon rct-icon-uncheck"
/>,
              },
              "id": null,
              "lang": Object {
                "collapseAll": "Collapse all",
                "expandAll": "Expand all",
                "toggle": "Toggle",
              },
              "name": undefined,
              "nameAsArray": false,
              "nativeCheckboxes": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [],
                  "icon": <i
                    className="fa fa-calendar-check-o"
/>,
                  "label": "All years",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onClick": null,
              "onExpand": [Function],
              "onlyLeafCheckboxes": false,
              "optimisticToggle": true,
              "showExpandAll": false,
              "showNodeIcon": true,
              "showNodeTitle": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SelectYears Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectYears
    handleCheck={[Function]}
    measureId="123"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                Years
        </label>
        <t
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expandOnClick={false}
                expanded={Array []}
                icons={
                        Object {
                                "check": <span
                                  className="rct-icon rct-icon-check"
                        />,
                                "collapseAll": <span
                                  className="rct-icon rct-icon-collapse-all"
                        />,
                                "expandAll": <span
                                  className="rct-icon rct-icon-expand-all"
                        />,
                                "expandClose": <span
                                  className="rct-icon rct-icon-expand-close"
                        />,
                                "expandOpen": <span
                                  className="rct-icon rct-icon-expand-open"
                        />,
                                "halfCheck": <span
                                  className="rct-icon rct-icon-half-check"
                        />,
                                "leaf": <span
                                  className="rct-icon rct-icon-leaf"
                        />,
                                "parentClose": <span
                                  className="rct-icon rct-icon-parent-close"
                        />,
                                "parentOpen": <span
                                  className="rct-icon rct-icon-parent-open"
                        />,
                                "uncheck": <span
                                  className="rct-icon rct-icon-uncheck"
                        />,
                              }
                }
                id={null}
                lang={
                        Object {
                                "collapseAll": "Collapse all",
                                "expandAll": "Expand all",
                                "toggle": "Toggle",
                              }
                }
                name={undefined}
                nameAsArray={false}
                nativeCheckboxes={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2001",
                                      "value": "2001",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2002",
                                      "value": "2002",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2003",
                                      "value": "2003",
                                    },
                                  ],
                                  "icon": <i
                                    className="fa fa-calendar-check-o"
                        />,
                                  "label": "All years",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onClick={null}
                onExpand={[Function]}
                onlyLeafCheckboxes={false}
                optimisticToggle={true}
                showExpandAll={false}
                showNodeIcon={true}
                showNodeTitle={false}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Years
</label>,
          <t
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expandOnClick={false}
            expanded={Array []}
            icons={
                        Object {
                                    "check": <span
                                      className="rct-icon rct-icon-check"
                        />,
                                    "collapseAll": <span
                                      className="rct-icon rct-icon-collapse-all"
                        />,
                                    "expandAll": <span
                                      className="rct-icon rct-icon-expand-all"
                        />,
                                    "expandClose": <span
                                      className="rct-icon rct-icon-expand-close"
                        />,
                                    "expandOpen": <span
                                      className="rct-icon rct-icon-expand-open"
                        />,
                                    "halfCheck": <span
                                      className="rct-icon rct-icon-half-check"
                        />,
                                    "leaf": <span
                                      className="rct-icon rct-icon-leaf"
                        />,
                                    "parentClose": <span
                                      className="rct-icon rct-icon-parent-close"
                        />,
                                    "parentOpen": <span
                                      className="rct-icon rct-icon-parent-open"
                        />,
                                    "uncheck": <span
                                      className="rct-icon rct-icon-uncheck"
                        />,
                                  }
            }
            id={null}
            lang={
                        Object {
                                    "collapseAll": "Collapse all",
                                    "expandAll": "Expand all",
                                    "toggle": "Toggle",
                                  }
            }
            name={undefined}
            nameAsArray={false}
            nativeCheckboxes={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2001",
                                          "value": "2001",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2002",
                                          "value": "2002",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2003",
                                          "value": "2003",
                                        },
                                      ],
                                      "icon": <i
                                        className="fa fa-calendar-check-o"
                        />,
                                      "label": "All years",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onClick={null}
            onExpand={[Function]}
            onlyLeafCheckboxes={false}
            optimisticToggle={true}
            showExpandAll={false}
            showNodeIcon={true}
            showNodeTitle={false}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Years",
            "className": "label",
          },
          "ref": null,
          "rendered": "Years",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expandOnClick": false,
            "expanded": Array [],
            "icons": Object {
              "check": <span
                className="rct-icon rct-icon-check"
/>,
              "collapseAll": <span
                className="rct-icon rct-icon-collapse-all"
/>,
              "expandAll": <span
                className="rct-icon rct-icon-expand-all"
/>,
              "expandClose": <span
                className="rct-icon rct-icon-expand-close"
/>,
              "expandOpen": <span
                className="rct-icon rct-icon-expand-open"
/>,
              "halfCheck": <span
                className="rct-icon rct-icon-half-check"
/>,
              "leaf": <span
                className="rct-icon rct-icon-leaf"
/>,
              "parentClose": <span
                className="rct-icon rct-icon-parent-close"
/>,
              "parentOpen": <span
                className="rct-icon rct-icon-parent-open"
/>,
              "uncheck": <span
                className="rct-icon rct-icon-uncheck"
/>,
            },
            "id": null,
            "lang": Object {
              "collapseAll": "Collapse all",
              "expandAll": "Expand all",
              "toggle": "Toggle",
            },
            "name": undefined,
            "nameAsArray": false,
            "nativeCheckboxes": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2001",
                    "value": "2001",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2002",
                    "value": "2002",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2003",
                    "value": "2003",
                  },
                ],
                "icon": <i
                  className="fa fa-calendar-check-o"
/>,
                "label": "All years",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onClick": null,
            "onExpand": [Function],
            "onlyLeafCheckboxes": false,
            "optimisticToggle": true,
            "showExpandAll": false,
            "showNodeIcon": true,
            "showNodeTitle": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    Years
          </label>
          <t
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expandOnClick={false}
                    expanded={Array []}
                    icons={
                              Object {
                                        "check": <span
                                          className="rct-icon rct-icon-check"
                              />,
                                        "collapseAll": <span
                                          className="rct-icon rct-icon-collapse-all"
                              />,
                                        "expandAll": <span
                                          className="rct-icon rct-icon-expand-all"
                              />,
                                        "expandClose": <span
                                          className="rct-icon rct-icon-expand-close"
                              />,
                                        "expandOpen": <span
                                          className="rct-icon rct-icon-expand-open"
                              />,
                                        "halfCheck": <span
                                          className="rct-icon rct-icon-half-check"
                              />,
                                        "leaf": <span
                                          className="rct-icon rct-icon-leaf"
                              />,
                                        "parentClose": <span
                                          className="rct-icon rct-icon-parent-close"
                              />,
                                        "parentOpen": <span
                                          className="rct-icon rct-icon-parent-open"
                              />,
                                        "uncheck": <span
                                          className="rct-icon rct-icon-uncheck"
                              />,
                                      }
                    }
                    id={null}
                    lang={
                              Object {
                                        "collapseAll": "Collapse all",
                                        "expandAll": "Expand all",
                                        "toggle": "Toggle",
                                      }
                    }
                    name={undefined}
                    nameAsArray={false}
                    nativeCheckboxes={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2001",
                                              "value": "2001",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2002",
                                              "value": "2002",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2003",
                                              "value": "2003",
                                            },
                                          ],
                                          "icon": <i
                                            className="fa fa-calendar-check-o"
                              />,
                                          "label": "All years",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onClick={null}
                    onExpand={[Function]}
                    onlyLeafCheckboxes={false}
                    optimisticToggle={true}
                    showExpandAll={false}
                    showNodeIcon={true}
                    showNodeTitle={false}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              Years
</label>,
            <t
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expandOnClick={false}
              expanded={Array []}
              icons={
                            Object {
                                          "check": <span
                                            className="rct-icon rct-icon-check"
                            />,
                                          "collapseAll": <span
                                            className="rct-icon rct-icon-collapse-all"
                            />,
                                          "expandAll": <span
                                            className="rct-icon rct-icon-expand-all"
                            />,
                                          "expandClose": <span
                                            className="rct-icon rct-icon-expand-close"
                            />,
                                          "expandOpen": <span
                                            className="rct-icon rct-icon-expand-open"
                            />,
                                          "halfCheck": <span
                                            className="rct-icon rct-icon-half-check"
                            />,
                                          "leaf": <span
                                            className="rct-icon rct-icon-leaf"
                            />,
                                          "parentClose": <span
                                            className="rct-icon rct-icon-parent-close"
                            />,
                                          "parentOpen": <span
                                            className="rct-icon rct-icon-parent-open"
                            />,
                                          "uncheck": <span
                                            className="rct-icon rct-icon-uncheck"
                            />,
                                        }
              }
              id={null}
              lang={
                            Object {
                                          "collapseAll": "Collapse all",
                                          "expandAll": "Expand all",
                                          "toggle": "Toggle",
                                        }
              }
              name={undefined}
              nameAsArray={false}
              nativeCheckboxes={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2001",
                                                "value": "2001",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2002",
                                                "value": "2002",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2003",
                                                "value": "2003",
                                              },
                                            ],
                                            "icon": <i
                                              className="fa fa-calendar-check-o"
                            />,
                                            "label": "All years",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onClick={null}
              onExpand={[Function]}
              onlyLeafCheckboxes={false}
              optimisticToggle={true}
              showExpandAll={false}
              showNodeIcon={true}
              showNodeTitle={false}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Years",
              "className": "label",
            },
            "ref": null,
            "rendered": "Years",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expandOnClick": false,
              "expanded": Array [],
              "icons": Object {
                "check": <span
                  className="rct-icon rct-icon-check"
/>,
                "collapseAll": <span
                  className="rct-icon rct-icon-collapse-all"
/>,
                "expandAll": <span
                  className="rct-icon rct-icon-expand-all"
/>,
                "expandClose": <span
                  className="rct-icon rct-icon-expand-close"
/>,
                "expandOpen": <span
                  className="rct-icon rct-icon-expand-open"
/>,
                "halfCheck": <span
                  className="rct-icon rct-icon-half-check"
/>,
                "leaf": <span
                  className="rct-icon rct-icon-leaf"
/>,
                "parentClose": <span
                  className="rct-icon rct-icon-parent-close"
/>,
                "parentOpen": <span
                  className="rct-icon rct-icon-parent-open"
/>,
                "uncheck": <span
                  className="rct-icon rct-icon-uncheck"
/>,
              },
              "id": null,
              "lang": Object {
                "collapseAll": "Collapse all",
                "expandAll": "Expand all",
                "toggle": "Toggle",
              },
              "name": undefined,
              "nameAsArray": false,
              "nativeCheckboxes": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2001",
                      "value": "2001",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2002",
                      "value": "2002",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2003",
                      "value": "2003",
                    },
                  ],
                  "icon": <i
                    className="fa fa-calendar-check-o"
/>,
                  "label": "All years",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onClick": null,
              "onExpand": [Function],
              "onlyLeafCheckboxes": false,
              "optimisticToggle": true,
              "showExpandAll": false,
              "showNodeIcon": true,
              "showNodeTitle": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
